# ansible-2024

./: README.md  ansible.cfg  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
collections/ansible/tuankn/: galaxy.yml
collections/ansible/tuankn/app/: README.md  galaxy.yml
collections/ansible/tuankn/proxmox_infra/: galaxy.yml
collections/ansible/tuankn/proxmox_infra/playbooks/: init_lxc_pven100.yml
collections/ansible/tuankn/proxmox_infra/plugins/filter/: filters.py
collections/ansible/tuankn/proxmox_infra/plugins/lookup/: cloud_image.py
collections/ansible/tuankn/proxmox_infra/plugins/modules/: user_info.py
collections/ansible/tuankn/proxmox_infra/roles/create_lxc_pven100/tasks/: get_api_pven100_combined.yml  main.yml
collections/ansible/tuankn/proxmox_infra/roles/create_lxc_pven100/vars/: main.yml
collections/ansible_devcontainer/tuankn/proxmox_infra/: README.md
collections/ansible_devcontainer/tuankn/proxmox_infra/playbooks/: create_cloud_vm_pven100.yml
collections/ansible_devcontainer/tuankn/proxmox_infra/plugins/filter/: checksum1.txt
collections/ansible_devcontainer/tuankn/proxmox_infra/plugins/lookup/data/: cloud_images.yaml
inventory/: proxmox_infra.yaml
vars/vault/: secret_infra.yaml
