[tool.poetry]
name = "ansible-2024"
version = "0.1.0"
description = ""
authors = ["tuankn82 <daitintdk@gmail.com>"]
license = "GPL-3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ansible-core = "^2.17.3"
hvac = "^2.3.0"
jmespath = "^1.0.1"
proxmoxer = "^2.1.0"
pydantic = "^2.8.2"
requests = "^2.32.3"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
